Frankbelford/uatv1ba/force-app/main/default/objects/Job_Acknowledgement_Details__c/Job_Acknowledgement_Details__c.object-meta.xml
<CustomObject>
    <label>Job Acknowledgement Details</label>
    <nameField>
        <displayFormat>JAD-{000000}</displayFormat>
        <label>Job Acknowledgement Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Acknowledgement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>