Frankbelford/uatv1ba/force-app/main/default/objects/Job_Acknowledgement_Details__c/fields/Acknowledgement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Date_Time__c</fullName>
    <label>Acknowledgement Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>