Frankbelford/uatv1ba/force-app/main/default/objects/Job_Acknowledgement_Details__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <label>Job Order</label>
    <referenceTo>sirenum__JobOrder__c</referenceTo>
    <relationshipLabel>Job Acknowledgement Details</relationshipLabel>
    <relationshipName>Job_Acknowledgement_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>