Frankbelford/uatv1ba/force-app/main/default/objects/Job_Acknowledgement_Details__c/fields/Job_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Number__c</fullName>
    <formula>Job_Order__r.Job_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Number</label>
    <type>Text</type>
</CustomField>