Frankbelford/uatv1ba/force-app/main/default/objects/Job_Acknowledgement_Details__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Acknowledgement Details</relationshipLabel>
    <relationshipName>Job_Acknowledgement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>